--- a/src/client/styles/globals.css
+++ b/src/client/styles/globals.css
@@ -13,3 +13,13 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+.rdg-cell[role=columnheader] {
+  word-wrap: break-word;
+  white-space: initial;
+  line-height: 1.2;
+  font-size: small;
+  text-align: center;
+}
+
+
