--- a/src/client/styles/globals.css
+++ b/src/client/styles/globals.css
@@ -14,12 +14,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
-.rdg-cell[role=columnheader] {
+.rdg-cell[role="columnheader"] {
   word-wrap: break-word;
   white-space: initial;
   line-height: 1.2;
   font-size: small;
   text-align: center;
 }
-
-
